# iced-texture-canvas

./: Cargo.toml  LICENSE  README.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs  out.rgba
src/: bitmap.rs  lib.rs  main.rs  shader.rs  shader.wgsl  widget.rs
src/shader/: handle.rs  pipeline.rs  primitive.rs  shader.wgsl  surface.rs  texture.rs  uniforms.rs
src/shader/primitive/: pipeline.rs
src/widget/: operation.rs  primitive.rs  style.rs  surface.rs
src/widget/primitive/: pipeline.rs  shader.wgsl  texture.rs  uniforms.rs
