[package]
name = "iced_wgpu_shader"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
glam = {version = "0.27.0", features=[ "bytemuck" ]}
parking_lot = "0.12.3"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "smol"]

[profile.dev]
split-debuginfo = "packed"
incremental = true
